tests/basic/assert/assert_true_00.pan.out
tests/basic/assert/assert_true_00.pan:5:1-4: error: unable to verify type of f40
tests/basic/assert/assert_true_00.pan:8:1-4: error: unable to verify type of f50