tests/basic/assert/assert_true_00.pan
assert : { b:ğ”¹ | b = true } â†’ ğŸ™

-- NOTE: "vâ‰ unit" reduces to "false"
f40 : {v:unit|vâ‰ unit}
f40 = assert true

f50 : {v:unit|false}
f50 = assert true

-- NOTE:
-- these should fail because "true" is not a subtype of "false"
-- the type of "assert true" is "{v:unit|true}"
